# mono-repo-skeleton

./: .gitignore  README.md  docker-compose.yml  nx.json  package-lock.json  package.json
.github/: pull_request_template.md
.github/scripts/: deploy-ingress.sh  setup-k8s.sh
.github/templates/: ingress.yaml  kubeconfig.yaml
.github/workflows/: ci.yml  deploy.yml  e2e.yml  manual-deploy.yml  pr-validation.yml
apps/backend/: AI_README.md  Dockerfile  README.md  config.py  main.py  package.json  project.json  pyproject.toml  webpack.config.js
apps/backend/k8s/: deployment.yaml
apps/backend/src/: index.html
apps/backend/src/app/: app.element.ts
apps/backend/tests/: test_main.py
apps/frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  project.json  tsconfig.json
apps/frontend-e2e/: package.json  playwright.config.ts  project.json
apps/frontend-e2e-playwright/: package.json
apps/frontend/helm/: values.yaml
apps/frontend/k8s/: deployment.yaml
apps/frontend/src/: middleware.ts
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/components/atoms/: Footer.tsx
apps/frontend/src/components/pages/: WelcomeDashboard.tsx
apps/frontend/src/components/templates/: Menu.tsx
apps/frontend/src/hooks/: usePingApi.ts
helm/: values.yaml
k8s/: backend.yaml  frontend.yaml
scripts/: install-backend.bat  run-backend.bat  test-backend.bat
